Revert "Fix search results pagination  overflow"
This reverts commit a2fabb6e0c5603a8ee7a712561618168cf2179c9.

Build failing.
Test failing: loads UV on the page with the correct controls

--- a/app/assets/stylesheets/ursus/_citation.scss
+++ b/app/assets/stylesheets/ursus/_citation.scss
@@ -3,25 +3,22 @@
 }
 
 .fa {
-  color: $ucla-darker-blue;
+  color:$ucla-darker-blue;
   margin-right: 10px;
 }
 
 .citation-link {
   font-size: 14px;
   letter-spacing: 1px;
-  a {
-    color: $ucla-blue !important;
-  }
+  color: $ucla-darker-blue !important;
 }
 
-.citation-link a:hover {
-  color: $ucla-darker-blue !important;
+.citation-link:hover {
+  color: $ucla-darkest-blue !important;
 }
 
 .link-and-icon {
   color: $ucla-darker-blue !important;
   display: flex;
-  align-items: center;
   margin-top: 10px;
 }
